# PA-3

./: .HTTPserver.cpp.swp  .configure.ac.swo  .configure.ac.swp  Dockerfile  FuncA.cpp  FuncA.h  HTTP_Server.cpp  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure~  deb.deb  funcA  main.cpp  scriptA.sh  scriptB.sh
.deps/: FuncA.Po  main.Po
.github/workflows/: c-cpp.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.1  traces.2
deb/DEBIAN/: control
deb/usr/local/share/man/man1/: FuncA.1
tests/: Funcatest1  Makefile  Makefile.am  main.cpp
tests/.deps/: main.Po
